Fix `Native.updateElements()` to work w/ array offset system + Edit browserSync settings + Fix unwanted horizontal scroll on docs page (mobile)
Resolves #88

--- a/docs/src/styles/objects/_scroll.scss
+++ b/docs/src/styles/objects/_scroll.scss
@@ -1,3 +1,4 @@
 .o-scroll {
     background-color: hsl(0,11%, 81%);
+    overflow: hidden;
 }
